--- a/src/03-bot/TradersBot/TradersBot/TradersBot.csproj
+++ b/src/03-bot/TradersBot/TradersBot/TradersBot.csproj
@@ -12,8 +12,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Azure.KeyVault.Core" Version="3.0.5" />
     <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.14.1" />
     <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.14.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" Version="4.14.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CustomActions" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TradersBot.CustomLogic\TradersBot.CustomLogic.csproj" />
   </ItemGroup>
 </Project>
