buy stock dialog worked out

--- a/src/03-bot/NasdaqBot/appsettings.json
+++ b/src/03-bot/NasdaqBot/appsettings.json
@@ -1,4 +1,7 @@
 {
   "MicrosoftAppId": "",
-  "MicrosoftAppPassword": ""
+  "MicrosoftAppPassword": "",
+  "LuisAppId": "b4571b1f-4b67-4c36-a854-38cc35e47a0d",
+  "LuisAPIKey": "0583ff0741d84d83b072b0032eb29268",
+  "LuisAPIHostName": "westeurope.api.cognitive.microsoft.com"
   }
