--- a/src/03-bot/NasdaqBot/NasdaqBot.csproj
+++ b/src/03-bot/NasdaqBot/NasdaqBot.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1" />
     <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.14.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.14.1" />
+    <PackageReference Include="Microsoft.Bot.Components.AdaptiveCards" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
