fine tuning dialog & welcome messages

--- a/src/03-bot/NasdaqBot/appsettings.json
+++ b/src/03-bot/NasdaqBot/appsettings.json
@@ -4,5 +4,14 @@
   "LuisAppId": "",
   "LuisAPIKey": "",
   "LuisAPIHostName": "westeurope.api.cognitive.microsoft.com",
-  "TranslatorKey": ""
+  "TranslatorKey": "",
+  "LanguageDetectionKey": "",
+  "LanguageDetectionEdpoint": "",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  }
 }
