--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,3 +51,44 @@ jobs:
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }} # Define secret variable in repository settings as per action documentation
           package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
+          
+      - name: Azure App Service Settings
+        uses: Azure/appservice-settings@v1
+        with:
+          # Name of the Azure Web App
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          # Name of an existing slot other than the production slot. Default value is production
+          slot-name: production
+          # Application settings using the JSON syntax set as value of secret variable: APP_SETTINGS
+          app-settings-json: '[
+                                {
+                                  "name": "LuisAppId",
+                                  "value": "${{ secrets.LuisAppId }}",
+                                  "slotSetting": false
+                                },
+                                {
+                                  "name": "LuisAPIKey",
+                                  "value": "${{ secrets.LuisAPIKey }}",
+                                  "slotSetting": false
+                                },
+                                {
+                                  "name": "LuisAPIHostName",
+                                  "value": "${{ secrets.LuisAPIHostName }}",
+                                  "slotSetting": false
+                                },
+                                {
+                                  "name": "TranslatorKey",
+                                  "value": "${{ secrets.TranslatorKey }}",
+                                  "slotSetting": false
+                                },
+                                {
+                                  "name": "LanguageDetectionKey",
+                                  "value": "${{ secrets.LanguageDetectionKey }}",
+                                  "slotSetting": false
+                                },
+                                {
+                                  "name": "LanguageDetectionEndpoint",
+                                  "value": "${{ secrets.LanguageDetectionEndpoint }}",
+                                  "slotSetting": false
+                                }
+                              ]'
