--- a/src/03-bot/TradersBot/TradersBot/settings/appsettings.json
+++ b/src/03-bot/TradersBot/TradersBot/settings/appsettings.json
@@ -55,8 +55,7 @@
         "fallbackToTextForSpeechIfEmpty": true
       }
     },
-    "components": [
-    ],
+    "components": [],
     "skills": {
       "allowedCallers": []
     },
